fixed margin issue for font on iphone + image cover issue on phone

--- a/css/creative.css
+++ b/css/creative.css
@@ -1,7 +1,9 @@
 body,
 html {
   width: 100%;
-  height: 100%;
+  height: 100vh; /* set viewport constraint */
+  min-height: 100%; /* enforce height */
+  /*height: 100%;*/
 }
 
 body {
@@ -209,6 +211,7 @@ header.masthead hr {
 
 header.masthead h1 {
   font-size: 1.8rem;
+  margin-top: 30px;
 }
 
 header.masthead p {
